feat - link components to index page

--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>"Hello HewJS! Hear me roar!"</title>
+  <script src="lib/react/react.js"></script>
+  <script src="lib/react/react-dom.js"></script>
 </head>
 <body>
-  "Hello HewJS! Hear me roar!"
+  <div class="app"></div>
+  <script src="compiled/components/app.js"></script>
 </body>
 </html>
