--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <div class="app"></div>
-  <script src="compiled/components/app.js"></script>
+  <script src="compiled/components/app.min.js"></script>
 </body>
 </html>
