--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,36 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>"Hello HewJS! Hear me roar!"</title>
-  <script src="lib/react/react.js"></script>
-  <script src="lib/react/react-dom.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link href="assets/style.css">
 </head>
 <body>
+  <div id="particles-js"></div>
   <div class="app"></div>
+  <script src="lib/particles.js/particles.min.js"></script>
+  <script src="assets/style.js"></script>
   <script src="compiled/components/app.min.js"></script>
+</body>
+</html>
+ -->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>"Hello HewJS! Hear me roar!"</title>
+  <script src="lib/react/react.js"></script>
+  <script src="lib/react/react-dom.js"></script>
+  <link rel="stylesheet" media="screen" href="assets/style.css">
+</head>
+<body>
+<!-- particles.js container -->
+<div id="particles-js"></div>
+<div class="app"></div>
+<!-- scripts -->
+<script src="lib/particles.js/particles.min.js"></script>
+<script src="assets/style.js"></script>
+
 </body>
 </html>
