(feat) Add a working interactive background, fix positioning of navbar

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
 <!-- particles.js container -->
 <div id="particles-js"></div>
 <div class="app"></div>
+<div class="navbar">dsadasdsa</div>
 <!-- scripts -->
 <script src="lib/particles.js/particles.min.js"></script>
 <script src="assets/style.js"></script>
