--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,13 @@
 <!-- particles.js container -->
 <div id="particles-js"></div>
 <div class="app"></div>
-<div class="navbar">dsadasdsa</div>
+<div class="navbar">
+  <h1 class="logo">
+    <a href="http://hewjs.herokuapp.com">
+      HewJS
+    </a>
+  </h1>
+</div>
 <!-- scripts -->
 <script src="lib/particles.js/particles.min.js"></script>
 <script src="assets/style.js"></script>
