--- a/client/index.html
+++ b/client/index.html
@@ -25,16 +25,26 @@
   <link rel="stylesheet" media="screen" href="assets/style.css">
 </head>
 <body>
-<!-- particles.js container -->
-<div id="particles-js"></div>
+
 <div class="app"></div>
-<div class="navbar">
-  <h1 class="logo">
-    <a href="http://hewjs.herokuapp.com">
-      HewJS
-    </a>
-  </h1>
+<div class="layout">
+  <header class="jumbotron header">
+    <div id="particles-js"></div>
+    <div class="container">
+      <div class="navbar">
+        <div class="navbar-logo">
+          <h1 class="logo">
+            <a href="hewjs.herokuapp.com"></a>
+          </h1>
+        </div>
+        <div class="navbar-menu">
+
+        </div>
+      </div>
+    </div>
+  </header>
 </div>
+
 <!-- scripts -->
 <script src="lib/particles.js/particles.min.js"></script>
 <script src="assets/style.js"></script>
