--- a/client/index.html
+++ b/client/index.html
@@ -55,19 +55,23 @@
   <div class="team-container text-center">
     <div class="member col-md-3">
       <img class="profile" src="https://avatars1.githubusercontent.com/u/15959217?v=3&s=460">
-      <h4 class="profile-name">Jamie Long</h4>
+      <h4 class="profile-name"><a href="https://github.com/jtlong3rd">Jamie Long</a></h4>
+      <h3 class="title">Product Owner & Lead Engineer</h3>
     </div>
     <div class="member col-md-3">
       <img class="profile" src="https://avatars3.githubusercontent.com/u/10336681?v=3&s=400">
-      <h4 class="profile-name">Karen Zapata</h4>
+      <h4 class="profile-name"><a href="https://github.com/kzapata19">Karen Zapata</a></h4>
+      <h3 class="title">SCRUM Master & Lead Engineer</h3>
     </div>
     <div class="member col-md-3">
       <img class="profile" src="https://avatars2.githubusercontent.com/u/18367600?v=3&s=400">
-      <h4>Peranat Dayananda</h4>
-    </div class="profile-name">
+      <h4 class="profile-name"><a href="https://github.com/peranatd">Peranat Dayananda</a></h4>
+      <h3 class="title">Lead Engineer</h3>
+    </div>
     <div class="member col-md-3">
       <img class="profile" src="https://avatars0.githubusercontent.com/u/13622298?v=3&s=460">
-      <h4 class="profile-name">Ron Cruz</h4>
+      <h4 class="profile-name"><a href="https://github.com/Ronolibert">Ron Cruz</a></h4>
+      <h3 class="title">Lead Engineer</h3>
     </div>
   </div>
 </div>
