--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
   <title>"Hello HewJS! Hear me roar!"</title>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet' type='text/css'>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link rel="stylesheet" media="screen" href="assets/style.css">
 </head>
 <body>
