--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css">
   <script src="lib/jquery/dist/jquery.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet' type='text/css'>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link rel="stylesheet" media="screen" href="assets/style.css">
 </head>
 <body>
