--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="stylesheet" media="screen" href="assets/style.css">
+  <link rel="stylesheet" media="screen" href="assets/style.min.css">
 </head>
 <body>
 
