(chore) Add link to github

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="">Home</a></li>
           <li><a href="#team-section" class="team ">Team</a></li>
-          <li><a href="">Github</a></li>
+          <li><a href="https://github.com/bulbasaur-HRR17/HewJS">Github</a></li>
         </ul>
       </div>
     </div>
