(chore) Add github links to avatars

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,6 @@
 
 <div id="particles-js" class="jumbotron">
   <div class="container">
-    <div class="container-fluid">
       <div class="navbar-header">
         <a href="#">HewJS</a>
       </div>
@@ -25,7 +24,6 @@
           <li><a href="https://github.com/bulbasaur-HRR17/HewJS">Github</a></li>
         </ul>
       </div>
-    </div>
     <div class="hew text-center">
       HewJS
     </div>
@@ -35,22 +33,22 @@
   <div class="col-md-12 text-center team-header">TEAM</div>
   <div class="team-container text-center">
     <div class="member col-md-3">
-      <img class="profile" src="https://avatars1.githubusercontent.com/u/15959217?v=3&s=460">
+      <a href="https://github.com/jtlong3rd"><img class="profile" src="https://avatars1.githubusercontent.com/u/15959217?v=3&s=460"></a>
       <h4 class="profile-name"><a href="https://github.com/jtlong3rd">Jamie Long</a></h4>
       <h3 class="title">Product Owner & Lead Engineer</h3>
     </div>
     <div class="member col-md-3">
-      <img class="profile" src="https://avatars3.githubusercontent.com/u/10336681?v=3&s=400">
+      <a href="https://github.com/kzapata19"><img class="profile" src="https://avatars3.githubusercontent.com/u/10336681?v=3&s=400"></a>
       <h4 class="profile-name"><a href="https://github.com/kzapata19">Karen Zapata</a></h4>
       <h3 class="title">SCRUM Master & Lead Engineer</h3>
     </div>
     <div class="member col-md-3">
-      <img class="profile" src="https://avatars2.githubusercontent.com/u/18367600?v=3&s=400">
+      <a href="https://github.com/peranatd"><img class="profile" src="https://avatars2.githubusercontent.com/u/18367600?v=3&s=400"></a>
       <h4 class="profile-name"><a href="https://github.com/peranatd">Peranat Dayananda</a></h4>
       <h3 class="title">Lead Engineer</h3>
     </div>
     <div class="member col-md-3">
-      <img class="profile" src="https://avatars0.githubusercontent.com/u/13622298?v=3&s=460">
+      <a href="https://github.com/Ronolibert"><img class="profile" src="https://avatars0.githubusercontent.com/u/13622298?v=3&s=460"></a>
       <h4 class="profile-name"><a href="https://github.com/Ronolibert">Ron Cruz</a></h4>
       <h3 class="title">Lead Engineer</h3>
     </div>
