--- a/client/chartGenerator.html
+++ b/client/chartGenerator.html
@@ -1,67 +1,41 @@
+<!DOCTYPE html>
+<html>
 <head>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
+  <script src="chartGenerator.js"></script>
+  <title></title>
 </head>
 <body>
-  <script type="text/javascript">
+<div class="chart">
+</div>
+<script>
+  let data1 = [
+    { "Word": 35, "Awesomeness":2000 },
+    { "Word": 34, "Awesomeness":3000 }
+  ];
 
-    let data1 = [
-      { "Word":"Hello", "Awesomeness":2000 },
-      { "Word":"World", "Awesomeness":3000 }
-    ];
+  // let data2 = [
+  //   { "Word":"Hello", "Awesomeness":3000 },
+  //   { "Word":"World", "Awesomeness":4000 }
+  // ];
 
-    let data2 = [
-      { "Word":"Hello", "Awesomeness":3000 },
-      { "Word":"World", "Awesomeness":4000 }
-    ];
+  let chart1 = {
+    data: data1,
+    xAxis: "Word",
+    yAxis: "Awesomeness",
+    type: "bar"
+  };
 
-    let chart1 = {
-      data: data1,
-      xAxis: "Word",
-      yAxis: "Awesomeness",
-      type: "bar"
-    };
+  // let chart2 = {
+  //   data: data2,
+  //   xAxis: "Word",
+  //   yAxis: "Awesomeness",
+  //   type: "bar"
+  // };
 
-    let chart2 = {
-      data: data2,
-      xAxis: "Word",
-      yAxis: "Awesomeness",
-      type: "bar"
-    };
-
-    let makeCharts = function(charts, height, width) {
-      let svg = dimple.newSvg("body", height, width);
-
-      // For each "chart" object,
-        // "typify" the type...
-        // add the category axis and measure axis...
-        // add the series
-        // draw
-      charts.forEach((chart) => {
-        let newChart = new dimple.chart(svg, chart.data);
-        let newChartType = typify(chart.type);
-
-        newChart.addCategoryAxis("x", chart.xAxis);
-        newChart.addMeasureAxis("y", chart.yAxis);
-
-        newChart.addSeries(null, newChartType);
-
-        newChart.draw();
-      });
-    };
-
-    let typify = function(typeString) {
-      if (typeString === "bar") {
-        return dimple.plot.bar;
-      } else if (typeString === "histogram") {
-        return dimple.plot.histogram;
-      } else if (typeString === "line") {
-        return dimple.plot.line;
-      } else if (typeString === "scatter") {
-        return dimple.plot.scatter;
-      }
-    };
-
-    makeCharts([chart1, chart2], 800, 600);
-  </script>
+  // makeCharts([chart1, chart2], 800, 600);
+  makeCharts([chart1], 800, 600);
+</script>
 </body>
+</html>
