(chore) Add script tags for styling dependencies

--- a/client/index.html
+++ b/client/index.html
@@ -5,16 +5,16 @@
   <title>"Hello HewJS! Hear me roar!"</title>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css">
   <script src="lib/jquery/dist/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="stylesheet" media="screen" href="assets/style.css">
+  <link rel="stylesheet" media="screen" href="assets/style.min.css">
 </head>
 <body>
 
 <div class="app"></div>
 
-
+<!-- html for login modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog text-center">
     <div class="loginmodal-container">
