--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="stylesheet" media="screen" href="assets/style.min.css">
+  <link rel="stylesheet" media="screen" href="assets/style.css">
 </head>
 <body>
 
