feat - add font face, add missing semicolons

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/dist/css/bootstrap.min.css">
   <script src="lib/jquery/dist/jquery.min.js"></script>
   <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
-  <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link rel="stylesheet" media="screen" href="assets/style.css">
 </head>
