refactor - first pass linting, add 'under construction' to login modal

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
     <div class="modal-dialog text-center">
     <div class="loginmodal-container">
       <h1>Welcome to HewJS Fool</h1><br></br>
+      <h3>under construction...</h3>
       <div>
         <form>
           <input type="text" name="user" placeholder="Username"></input>
