chore - change files to minified version

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   <link href='https://fonts.googleapis.com/css?family=Bungee+Outline' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="stylesheet" media="screen" href="assets/style.css">
+  <link rel="stylesheet" media="screen" href="assets/style.min.css">
 </head>
 <body>
 
@@ -36,11 +36,8 @@
   </div>
 </div>
 <!-- scripts -->
-<script src="compiled/components/app.js"></script>
+<script src="compiled/components/app.min.js"></script>
 <script src="lib/particles.js/particles.min.js"></script>
 <script src="assets/style.js"></script>
 </body>
 </html>
-
-
-
