--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 
 <div class="app"></div>
 
-<!-- html for login modal -->
+<!-- html for login modal referenced in login component-->
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog text-center">
     <div class="loginmodal-container">
